URLとAPIKEY置き換え

--- a/admin.html
+++ b/admin.html
@@ -147,8 +147,7 @@
     <script>
       // ▼▼▼ ここを書き換えてください ▼▼▼
       const SUPABASE_URL = 'https://aetenreumweohzjqqcpf.supabase.co';
-      const SUPABASE_ANON_KEY =
-        'sb_publishable__0UiwcqGL8b6OwX828Lh0A_eteYgUoi';
+      const SUPABASE_ANON_KEY = 'sb_publishable__0UiwcqGL8b6OwX828Lh0A_eteYgUoi';
       // ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
 
       const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -259,3 +258,4 @@
     </script>
   </body>
 </html>
+
